[gd_scene load_steps=10 format=3 uid="uid://soi0ukhd5ia7"]

[ext_resource type="Script" path="res://scenes/menu/Menu.gd" id="1_ky4yk"]
[ext_resource type="Texture2D" uid="uid://d3qs3kcfo86vu" path="res://assets/interface/graphics/logo.png" id="1_qqak4"]
[ext_resource type="Texture2D" uid="uid://cq6db0bxsohb7" path="res://assets/interface/buttons/menuButton/greenRectNormal.png" id="2_u5aox"]
[ext_resource type="Script" path="res://scenes/menu/menuButtonController.gd" id="3_u31em"]
[ext_resource type="Texture2D" uid="uid://cxqiekwrtc40c" path="res://assets/items/egg.png" id="4_h0m5e"]
[ext_resource type="Texture2D" uid="uid://dh7lklofckxxe" path="res://assets/items/golden_egg.png" id="5_2ngek"]

[sub_resource type="Gradient" id="Gradient_cwegv"]
offsets = PackedFloat32Array(0, 0.32967, 1)
colors = PackedColorArray(0.184314, 0.529412, 0.921569, 1, 0.490823, 0.700689, 0.822, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g5787"]
gradient = SubResource("Gradient_cwegv")

[sub_resource type="Theme" id="Theme_prrhd"]

[node name="menu" type="Node2D"]
script = ExtResource("1_ky4yk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(360, 640)
rotation = 1.5708
scale = Vector2(19.9997, 11.2495)
texture = SubResource("GradientTexture2D_g5787")

[node name="LogoContainer" type="CenterContainer" parent="."]
offset_left = 360.0
offset_top = 640.0
offset_right = 400.0
offset_bottom = 680.0
use_top_left = true

[node name="Logo" type="Sprite2D" parent="LogoContainer"]
position = Vector2(0, -250)
scale = Vector2(0.625, 0.625)
texture = ExtResource("1_qqak4")

[node name="ButtonsContainer" type="CenterContainer" parent="."]
offset_left = 360.0
offset_top = 1000.0
offset_right = 360.0
offset_bottom = 1000.0
scale = Vector2(0.8, 0.8)
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartButton" type="MenuButton" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_prrhd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Start"
icon = ExtResource("2_u5aox")
icon_alignment = 1
script = ExtResource("3_u31em")
scene_path = "res://scenes/game/game.tscn"

[node name="StoreButton" type="MenuButton" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_prrhd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Store"
icon = ExtResource("2_u5aox")
icon_alignment = 1
script = ExtResource("3_u31em")
scene_path = "res://scenes/shop/shop.tscn"

[node name="Eggs" type="Node2D" parent="."]

[node name="EggSprite" type="Sprite2D" parent="Eggs"]
position = Vector2(503.125, 51.875)
scale = Vector2(1.13462, 1.13462)
texture = ExtResource("4_h0m5e")

[node name="GoldenEggSprite" type="Sprite2D" parent="Eggs"]
position = Vector2(512, 142)
scale = Vector2(0.0932928, 0.0932928)
texture = ExtResource("5_2ngek")

[node name="GoldenEggLabel" type="Label" parent="Eggs"]
offset_left = 559.0
offset_top = 120.0
offset_right = 675.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 28
text = "0	"
vertical_alignment = 1

[node name="EggLabel" type="Label" parent="Eggs"]
offset_left = 559.0
offset_top = 31.0
offset_right = 675.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 28
text = "0"
vertical_alignment = 1

[node name="HighscoreLabel" type="Label" parent="."]
offset_left = 28.0
offset_top = 31.0
offset_right = 439.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 28
text = "HIGHSCORE: "
vertical_alignment = 1

[connection signal="pressed" from="ButtonsContainer/VBoxContainer/StartButton" to="ButtonsContainer/VBoxContainer/StartButton" method="_switch_to_scene"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/StoreButton" to="ButtonsContainer/VBoxContainer/StoreButton" method="_switch_to_scene"]
